[package]
name = "cpu-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
utopia = { path = "../utopia", features = ["cpu-tests"] }
