[package]
name = "utopia-cli"
version = "0.1.0"
edition = "2021"
default-run = "utopia"

[[bin]]
name = "utopia"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
memmap2 = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utopia-winit = { path = "../utopia-winit" }
