[package]
name = "utopia-sdl"
version = "0.1.0"
edition = "2021"
default-run = "utopia-sdl"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
memmap2 = "0.7.1"
sdl2 = "0.35.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utopia = { path = "../utopia" }
