[package]
name = "utopia-wasm-bindings"
version = "0.1.0"
authors = ["James Lippitt <james.lippitt@gmail.com>"]
edition = "2021"

[lib]
name = "utopia"
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
utopia-winit = { path = "../utopia-winit" }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Element", "HtmlCanvasElement"] }
