[package]
name = "utopia-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
clap = { version = "4.3.24", features = ["derive"] }
gilrs = "0.10.2"
num-derive = "0.4.0"
num-traits = "0.2.16"
pollster = "0.3.0"
utopia = { path = "../utopia" }
wgpu = "0.17.0"
winit = "0.28.6"
