[package]
name = "utopia-winit"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
gilrs = "0.10.2"
pollster = "0.3.0"
tracing = "0.1.37"
utopia = { path = "../utopia" }
web-time = "0.2.0"
wgpu = { version = "0.17.1", features = ["webgl"] }
winit = { version = "0.29.2", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = [
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
] }
