[package]
name = "utopia"
version = "0.1.0"
edition = "2021"

[features]
cpu-tests = []

[dependencies]
arrayvec = "0.7.4"
bitfield-struct = "0.5.3"
bitflags = "2.3.3"
enum_dispatch = "0.3.11"
num-derive = "0.4.0"
num-traits = "0.2.16"
subslice = "0.2.3"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
